--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -6,7 +6,7 @@
   font-family: 'Ubuntu', sans-serif;
   background-image: url('../images/first-bg.png'),
     url('../images/second-bg.png');
-  background-position: -150px 250px, 100% 200px; // Позиции фонов в пикселях
+  background-position: -150px 250px, 100% 200px;
   background-repeat: no-repeat;
 }
 
@@ -22,13 +22,42 @@
     width: 70%;
     margin: auto;
   }
+  &__burger {
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 34px;
+    height: 18px;
+    cursor: pointer;
+
+    &-line {
+      width: 100%;
+      height: 3px;
+      background-color: white;
+      transition: all 0.3s;
+    }
+
+    &.active .header__burger-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+
+    &.active .header__burger-line:nth-child(2) {
+      opacity: 0;
+    }
+
+    &.active .header__burger-line:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
+  }
+
   &__block {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 350px;
+    width: 370px;
     font-weight: 700;
     font-size: 16px;
+    margin-right: 100px;
   }
   &__button {
     display: flex;
@@ -43,12 +72,20 @@
     border: 0;
     border-radius: 10px;
   }
+  &__mobile {
+    display: none;
+  }
+  &__text {
+    text-decoration: none;
+    color: #fff;
+  }
 }
 
 .main {
   max-width: 1280px;
   margin: 30px auto;
   display: flex;
+  padding: 0 20px;
   gap: 30px;
 }
 
@@ -58,30 +95,36 @@ li {
 
 .sidebar {
   background-color: #9564aa1a;
-  width: 270px;
-  height: 810px;
+  width: 238px;
+  height: 770px;
   border-radius: 10px;
   border: 2px solid #9564aa33;
-  padding: 18px;
+  padding: 15px;
   &__block {
     display: flex;
     align-items: center;
     gap: 15px;
-    padding-bottom: 22px;
+    padding-bottom: 18px;
     border-bottom: 2px solid #9564aa33;
   }
   &__links {
-    margin: 21px 12px;
+    margin: 20px 13px;
   }
   &__link {
     display: flex;
+    align-items: center;
     gap: 30px;
-    margin-bottom: 25px;
+    margin-bottom: 23px;
+  }
+  &__links {
+    gap: 60px;
   }
   &__link-text {
     font-weight: 400;
     font-size: 16px;
     margin: 0;
+    text-decoration: none;
+    color: #000000;
   }
   &__name {
     margin: 0;
@@ -97,26 +140,31 @@ li {
     color: #fff;
     border: 0;
     border-radius: 5px;
+    font-size: 10px;
+    font-weight: 400;
   }
 }
 
+.section-slider {
+  display: none;
+}
+
 .credit-page {
-  display: flex;
-  flex-direction: column;
+  margin-top: -10px;
 }
 
 .credit {
   max-width: 870px;
   width: 100%;
   &__title {
-    font-style: italic;
     margin: 0;
     font-weight: 700;
     font-size: 40px;
     border: none;
-    box-shadow: 4px 4px 10px #00000040;
     padding-bottom: 20px;
     border-bottom: 2px solid #9564aa;
+    text-shadow: 1px -1px 0 rgba(0, 0, 0, 0.25), 1px -1px 0 rgba(0, 0, 0, 0.25),
+      1px 1px 0 rgba(0, 0, 0, 0.25), 5px 4px 0 rgba(0, 0, 0, 0.25);
   }
   &__cards-block {
     display: flex;
@@ -135,6 +183,9 @@ li {
     font-size: 40px;
     font-weight: 700;
     margin: 0;
+    -webkit-text-stroke: 1px #fff;
+    letter-spacing: 2px;
+    line-height: 45.96px;
   }
   &__text {
     font-weight: 700;
@@ -151,7 +202,8 @@ li {
     margin: 0;
   }
   &__cards-block {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(144px, 1fr));
     margin: 26px 0 16px;
     gap: 30px;
   }
@@ -161,14 +213,45 @@ li {
     align-items: center;
     border-radius: 10px;
     width: 150px;
-    height: 123px;
+    height: 116px;
     border: 2px solid #9564aa;
     background-color: #9564aa1a;
     gap: 11px;
     justify-content: center;
+    padding-bottom: 4px;
     &_active {
       gap: 0;
       background-color: #9564aa;
+    }
+    &:hover {
+      background-color: #9564aa;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      .credit__span {
+        display: inline-block;
+      }
+      .credit__count {
+        color: #fff;
+      }
+      .credit__button {
+        color: #000000;
+      }
+    }
+
+    .credit__price {
+      transition: color 0.3s ease;
+    }
+
+    .credit__button {
+      background-color: #ffcf2d;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+
+      &:hover {
+        background-color: #e5b62a;
+      }
     }
   }
   &__buy-block {
@@ -176,8 +259,8 @@ li {
     justify-content: center;
     align-items: center;
     gap: 41px;
-    max-width: 870px;
-    height: 74px;
+    max-width: 890px;
+    height: 70px;
     width: 100%;
     background-color: #aa646433;
     border-radius: 10px;
@@ -187,10 +270,16 @@ li {
     display: flex;
     align-items: center;
     gap: 5px;
+
     &_active {
       margin: 7px 0 11px;
     }
   }
+
+  &__price_special {
+    margin: 0 0 10px 70px;
+  }
+
   &__count {
     font-size: 24px;
     font-weight: 700;
@@ -217,6 +306,8 @@ li {
     border: 0;
     width: 185px;
     height: 50px;
+    font-size: 16px;
+    font-weight: 500;
     &_squad {
       width: 120px;
       height: 52px;
@@ -225,10 +316,10 @@ li {
       width: 120px;
       height: 52px;
       background-color: #ffcf2d;
-      color: #000000;
     }
   }
   &__span {
+    display: none;
     background-color: #ffcf2d;
     border-radius: 5px;
     padding: 3px 10px;
@@ -239,12 +330,11 @@ li {
 }
 
 .credit__checkbox {
+  margin-top: 12px;
   .custom-checkbox {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    margin-top: 12px;
-
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 16px;
     &__input {
       position: absolute;
       opacity: 0;
@@ -252,26 +342,27 @@ li {
     }
 
     &__checkmark {
-      width: 20px;
-      height: 20px;
+      width: 18px;
+      height: 18px;
       background-color: #f0f0f0;
       border: 1px solid #ccc;
-      border-radius: 4px;
+      border-radius: 5px;
       display: inline-block;
       margin-right: 10px;
       position: relative;
       transition: background-color 0.2s ease;
       font-size: 13px;
       font-weight: 400;
+      margin-bottom: -5px;
 
       &::after {
         content: '';
         position: absolute;
         display: none;
-        left: 5px;
-        top: 2px;
-        width: 6px;
-        height: 12px;
+        left: 6px;
+        top: 4px;
+        width: 4px;
+        height: 9px;
         border: solid white;
         border-width: 0 2px 2px 0;
         transform: rotate(45deg);
@@ -287,7 +378,6 @@ li {
       }
     }
     &__link {
-      margin-left: 5px;
       color: #9564aa;
       text-decoration: none;
     }
@@ -295,10 +385,17 @@ li {
 }
 
 .stages {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  margin-top: 33px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-areas:
+    '. icon1 icon2 .'
+    'icon3 icon4 icon4 icon5'
+    '. icon6 icon7 .';
+  max-width: 340px;
+  margin: 30px auto 0;
+  gap: 14px;
+  grid-template-rows: 100px 100px 100px 100px;
+  grid-template-columns: 30px 100px 100px 30px;
   &__line {
     display: flex;
     align-items: center;
@@ -319,52 +416,108 @@ li {
     align-items: center;
     gap: 4px;
   }
+  &__icon:nth-child(1) {
+    grid-area: icon1;
+  }
+  &__icon:nth-child(2) {
+    grid-area: icon2;
+  }
+  &__icon:nth-child(3) {
+    grid-area: icon3;
+  }
+
+  &__icon:nth-child(4) {
+    grid-area: icon4;
+  }
+
+  &__icon:nth-child(5) {
+    grid-area: icon5;
+  }
+
+  &__icon:nth-child(6) {
+    grid-area: icon6;
+  }
+
+  &__icon:nth-child(7) {
+    grid-area: icon7;
+  }
+  &__icon {
+    display: flex;
+    position: relative;
+    cursor: pointer;
+  }
+  &__img-wrapper {
+    transition: background-color 0.3s ease;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #9564aa1a;
+    border-radius: 100px;
+  }
+  &__text {
+    transition: color 0.3s ease;
+  }
+  &__icon:hover &__img-wrapper img {
+    filter: brightness(0) invert(1);
+  }
+  &__icon:hover &__img-wrapper {
+    background-color: #ffcf2d;
+  }
+  &__icon:hover &__text {
+    content: 'Просмотр скрытых фото';
+    color: #ffcf2d;
+  }
 }
 
-.stages {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 3 колонки одинаковой ширины */
-  grid-template-areas:
-    '. icon1 icon2 .'
-    'icon3 icon4 icon4 icon5'
-    '. icon6 icon7 .'; /* Размещение элементов по строкам */
-  margin: 36px auto 0;
-  gap: 20px; /* Зазор между элементами */
-  grid-template-rows: 100px 100px 100px 100px;
-  grid-template-columns: 30px 100px 100px 30px;
-}
-
-.stages__icon:nth-child(1) {
-  grid-area: icon1; /* Первому элементу присваиваем область icon1 */
-}
-
-.stages__icon:nth-child(2) {
-  grid-area: icon2; /* Второму элементу присваиваем область icon2 */
-}
-
-.stages__icon:nth-child(3) {
-  grid-area: icon3; /* Третьему элементу присваиваем область icon3 */
-}
-
-.stages__icon:nth-child(4) {
-  grid-area: icon4; /* Четвертому элементу присваиваем область icon4 */
-}
-
-.stages__icon:nth-child(5) {
-  grid-area: icon5; /* Пятому элементу присваиваем область icon5 */
-}
-
-.stages__icon:nth-child(6) {
-  grid-area: icon6; /* Шестому элементу присваиваем область icon6 */
-}
-
-.stages__icon:nth-child(7) {
-  grid-area: icon7; /* Седьмому элементу присваиваем область icon7 */
+@media (max-width: 1000px) {
+  .sidebar {
+    display: none;
+  }
+  .header {
+    min-height: 50px;
+    &__logo {
+      display: none;
+    }
+    &__text {
+      display: none;
+    }
+    &__button {
+      display: none;
+    }
+    &__mobile {
+      display: block;
+    }
+    &__wrapper {
+      width: 85%;
+    }
+    &__burger {
+      display: flex;
+    }
+  }
+  .credit__offer-block {
+    flex-direction: column;
+  }
 }
 
 @media (max-width: 320px) {
-  .sidebar {
-    display: none;
+  .main {
+    margin-top: 15px;
+  }
+  .custom__checkbox {
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 16px;
+  }
+
+  .page {
+    background-image: none;
+  }
+
+  .credit-page {
+    max-width: 280px;
+    margin: 0 auto;
   }
 
   .credit {
@@ -372,14 +525,25 @@ li {
     width: 100%;
     &__title {
       font-size: 20px;
+      padding-bottom: 10px;
+      text-shadow: none;
+    }
+    &__container {
+      display: none;
+    }
+    &__checkbox {
+      .custom-checkbox {
+        max-width: 250px;
+        flex-wrap: wrap;
+      }
     }
   }
 
   .stages {
-    display: grid;
     grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 50px 50px 50px 50px;
     grid-template-areas:
-      'icon4 icon4'
+      'icon4'
       'icon1'
       'icon2'
       'icon3'
@@ -387,6 +551,156 @@ li {
       'icon6'
       'icon7';
     margin: 36px auto 0;
-    gap: 20px;
+    gap: 5px;
+    &__icon {
+      flex-direction: row;
+      gap: 9px;
+    }
+    &__text {
+      max-width: 196px;
+      width: 100%;
+      text-align: start;
+    }
+    &__almaz {
+      margin: 0 auto;
+      width: 81px;
+      height: 67px;
+    }
+    &__img-wrapper {
+      width: 30px;
+      height: 30px;
+    }
+    &__img {
+      width: 16px;
+      height: 16px;
+    }
+  }
+  .section-slider {
+    position: relative;
+    display: block;
+    margin-top: 35px;
+  }
+  .content-slider {
+    max-width: 1366px;
+  }
+  .slider {
+    width: 320px;
+    height: 80px;
+    overflow: hidden;
+  }
+  .middle {
+    position: absolute;
+    top: -32.5%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+  }
+  .navigation {
+    position: absolute;
+    top: 60px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+  .bar {
+    height: 7px;
+    width: 7px;
+    margin: 6px;
+    cursor: pointer;
+    background-color: #ddd;
+    opacity: 0.5;
+    border-radius: 10px;
+    transition: all 0.4s ease;
+    background-color: #ffc500;
+  }
+  .bar:hover {
+    opacity: 1;
+    transform: scale(1.1);
+  }
+  input[name='r'] {
+    position: absolute;
+    visibility: hidden;
+  }
+
+  .slides {
+    width: 500%;
+    height: 100%;
+    display: flex;
+    gap: 10px;
+  }
+  .slide {
+    transition: all 0.6s ease;
+    width: 100%;
+    &__span {
+      background-color: #ffcf2d;
+      height: 17px;
+      width: 103px;
+      border-radius: 5px;
+      color: #000000;
+      margin-top: 15px;
+      margin-left: -15px;
+      font-size: 14px;
+      font-weight: 700;
+      padding: 4px 10px;
+    }
+    &__count {
+      margin: auto 30px auto 0;
+      font-size: 24px;
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+    }
+    &__currency {
+      background-color: #ffcf2d;
+      margin-left: 5px;
+      color: #000000;
+      font-size: 8px;
+      padding: 4px;
+      border-radius: 100px;
+    }
+    &__slash {
+      font-weight: 400;
+    }
+    &__button {
+      max-width: 300px;
+      width: 100%;
+      margin-left: -10px;
+      background-color: #ffcf2d;
+      border-radius: 10px;
+      height: 55px;
+      border: 0;
+      font-weight: 700;
+      font-size: 16px;
+      margin: 95px auto 0;
+    }
+    &__card-squad {
+      display: flex;
+      justify-content: space-between;
+      background-color: #9564aa;
+      height: 59px;
+      border-radius: 10px;
+      color: #fff;
+      display: flex;
+      max-width: 260px;
+    }
+  }
+
+  #r1:checked ~ .s1 {
+    margin-left: 2.4%;
+  }
+
+  #r2:checked ~ .s1 {
+    margin-left: -23%;
+  }
+
+  #r3:checked ~ .s1 {
+    margin-left: -64%;
+  }
+
+  #r4:checked ~ .s1 {
+    margin-left: -146.6%;
+  }
+
+  #r5:checked ~ .s1 {
+    margin-left: -393.5%;
   }
 }
