--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -21,7 +21,7 @@
 .header__wrapper {
   display: flex;
   justify-content: space-between;
-  width: 70%;
+  width: 65%;
   margin: auto;
 }
 
@@ -60,7 +60,7 @@
   width: 370px;
   font-weight: 700;
   font-size: 16px;
-  margin-right: 100px;
+  margin-right: 80px;
 }
 
 .header__button {
@@ -81,7 +81,7 @@
   display: none;
 }
 
-.header__text {
+.header__link {
   text-decoration: none;
   color: #fff;
 }
@@ -105,6 +105,10 @@ li {
   border-radius: 10px;
   border: 2px solid #9564aa33;
   padding: 15px;
+}
+
+.sidebar__link-list {
+  padding: 0;
 }
 
 .sidebar__block {
@@ -157,13 +161,14 @@ li {
   display: none;
 }
 
-.credit-page {
+.credit__page {
   margin-top: -10px;
 }
 
 .credit {
   max-width: 870px;
   width: 100%;
+  margin-top: -10px;
 }
 
 .credit__title {
@@ -274,7 +279,8 @@ li {
 }
 
 .credit__button:hover {
-  background-color: #e5b62a;
+  color: #000000;
+  background-color: #ffcf2d;
 }
 
 .credit__buy-block {
@@ -509,7 +515,7 @@ li {
     display: none;
   }
 
-  .header__text {
+  .header__link {
     display: none;
   }
 
@@ -527,6 +533,10 @@ li {
 
   .header__burger {
     display: flex;
+  }
+
+  .credit {
+    margin: 0 auto;
   }
 
   .credit__offer-block {
@@ -549,7 +559,7 @@ li {
     background-image: none;
   }
 
-  .credit-page {
+  .credit__page {
     max-width: 280px;
     margin: 0 auto;
   }
