отредактировал по БЭМ

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -146,7 +146,7 @@ li {
   width: 100%;
   margin-top: -10px;
 
-  &__slider {
+  &__slider-container {
     display: none;
   }
 
@@ -334,19 +334,11 @@ li {
     height: 52px;
     background-color: $highlight-color;
   }
-}
-
-.custom-checkbox {
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-
-  &__input {
+  &__checkbox-input {
     position: absolute;
     opacity: 0;
     cursor: pointer;
   }
-
   &__checkmark {
     width: 18px;
     height: 18px;
@@ -360,13 +352,12 @@ li {
     font-size: 13px;
     font-weight: 400;
     margin-bottom: -5px;
-
     &::after {
       content: '';
       position: absolute;
       display: none;
       left: 6px;
-      top: 4px;
+      top: 2px;
       width: 4px;
       height: 9px;
       border: solid white;
@@ -374,8 +365,7 @@ li {
       transform: rotate(45deg);
     }
   }
-
-  &__input:checked + &__checkmark {
+  &__checkbox-input:checked + &__checkmark {
     background-color: #9564aa;
     border-color: #9564aa;
 
@@ -383,27 +373,24 @@ li {
       display: block;
     }
   }
-
   &__link {
     color: #9564aa;
     text-decoration: none;
   }
-}
-
-.stages {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-areas:
-    '. icon1 icon2 .'
-    'icon3 icon4 icon4 icon5'
-    '. icon6 icon7 .';
-  max-width: 340px;
-  margin: 30px auto 0;
-  gap: 14px;
-  grid-template-rows: 100px 100px 100px 100px;
-  grid-template-columns: 30px 100px 100px 30px;
-
-  &__icon {
+  &__stages {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas:
+      '. icon1 icon2 .'
+      'icon3 icon4 icon4 icon5'
+      '. icon6 icon7 .';
+    max-width: 340px;
+    margin: 30px auto 0;
+    gap: 14px;
+    grid-template-rows: 100px 100px 100px 100px;
+    grid-template-columns: 30px 100px 100px 30px;
+  }
+  &__stages-icon {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -434,7 +421,7 @@ li {
     }
 
     &:hover {
-      .stages__img-wrapper {
+      .credit__stages-wrapper {
         background-color: #ffcf2d;
 
         img {
@@ -442,30 +429,13 @@ li {
         }
       }
 
-      .stages__text {
+      .credit__stages-text {
         color: #ffcf2d;
         content: 'Просмотр скрытых фото';
       }
     }
   }
-  &__line {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  &__text {
-    width: 118px;
-    font-weight: 700;
-    font-size: 12px;
-    margin: 0;
-    line-height: 14px;
-    text-align: center;
-    color: #9564aa;
-    transition: color 0.3s ease;
-  }
-
-  &__img-wrapper {
+  &__stages-wrapper {
     transition: background-color 0.3s ease;
     width: 50px;
     height: 50px;
@@ -474,6 +444,16 @@ li {
     justify-content: center;
     background-color: #9564aa1a;
     border-radius: 100px;
+  }
+  &__stages-text {
+    width: 118px;
+    font-weight: 700;
+    font-size: 12px;
+    margin: 0;
+    line-height: 14px;
+    text-align: center;
+    color: #9564aa;
+    transition: color 0.3s ease;
   }
 }
 
@@ -590,12 +570,6 @@ li {
     margin-top: 15px;
   }
 
-  .custom__checkbox {
-    font-weight: 400;
-    font-size: 10px;
-    line-height: 16px;
-  }
-
   .page {
     background-image: none;
   }
@@ -620,83 +594,50 @@ li {
     }
 
     &__checkbox {
-      .custom-checkbox {
-        max-width: 250px;
-        flex-wrap: wrap;
-      }
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 16px;
     }
-    &__slider {
+    &__custom-checkbox {
+      max-width: 260px;
+      flex-wrap: wrap;
+    }
+    &__slider-container {
       position: relative;
       display: flex;
       align-items: center;
       margin-top: 35px;
       max-width: 1366px;
     }
-  }
-
-  .stages {
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 50px 50px 50px 50px;
-    grid-template-areas:
-      'icon4'
-      'icon1'
-      'icon2'
-      'icon3'
-      'icon5'
-      'icon6'
-      'icon7';
-    margin: 36px auto 0;
-    gap: 5px;
-
-    &__icon {
-      flex-direction: row;
-      gap: 9px;
+    &__slider {
+      width: 320px;
+      height: 80px;
+      overflow: hidden;
     }
-
-    &__text {
-      max-width: 196px;
+    &__slides {
+      width: 500%;
+      height: 100%;
+      display: flex;
+      gap: 10px;
+    }
+    &__slide {
+      transition: all 0.6s ease;
       width: 100%;
-      text-align: start;
     }
-
-    &__almaz {
-      margin: 0 auto;
-      width: 81px;
-      height: 67px;
+    &_middle {
+      position: absolute;
+      top: -32.5%;
+      left: 50%;
+      transform: translate(-50%, 50%);
     }
-
-    &__img-wrapper {
-      width: 30px;
-      height: 30px;
-
-      &__img {
-        width: 16px;
-        height: 16px;
-      }
+    &__navigation {
+      position: absolute;
+      top: 60px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
     }
-  }
-
-  .slider {
-    width: 320px;
-    height: 80px;
-    overflow: hidden;
-  }
-
-  .middle {
-    position: absolute;
-    top: -32.5%;
-    left: 50%;
-    transform: translate(-50%, 50%);
-  }
-
-  .navigation {
-    position: absolute;
-    top: 60px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-
-    .bar {
+    &__bar {
       height: 7px;
       width: 7px;
       margin: 6px;
@@ -711,56 +652,14 @@ li {
         transform: scale(1.1);
       }
     }
-  }
 
-  input[name='r'] {
-    position: absolute;
-    visibility: hidden;
-  }
-
-  .slides {
-    width: 500%;
-    height: 100%;
-    display: flex;
-    gap: 10px;
-  }
-
-  .slide {
-    transition: all 0.6s ease;
-    width: 100%;
-
-    &__span {
+    &__currency {
       background-color: #ffcf2d;
-      height: 17px;
-      width: 103px;
-      border-radius: 5px;
+      margin: 0 4px;
       color: #000000;
-      margin-top: 15px;
-      margin-left: -15px;
-      font-size: 14px;
-      font-weight: 700;
-      padding: 4px 10px;
-    }
-
-    &__count {
-      margin: auto 30px auto 0;
-      font-size: 24px;
-      font-weight: 700;
-      display: flex;
-      align-items: center;
-
-      &__currency {
-        background-color: #ffcf2d;
-        margin-left: 5px;
-        color: #000000;
-        font-size: 8px;
-        padding: 4px;
-        border-radius: 100px;
-      }
-    }
-
-    &__slash {
-      font-weight: 400;
+      font-size: 8px;
+      padding: 4px;
+      border-radius: 100px;
     }
 
     &__button {
@@ -774,36 +673,111 @@ li {
       font-weight: 700;
       font-size: 16px;
       margin: 95px auto 0;
+      color: #000000;
+    }
+    &__slide {
+      transition: all 0.6s ease;
+      width: 100%;
+    }
+    &__span {
+      display: flex;
+      background-color: #ffcf2d;
+      height: 17px;
+      width: 103px;
+      border-radius: 5px;
+      color: #000000;
+      margin: 0 0 0 -18px;
+      font-size: 14px;
+      font-weight: 800;
+      padding: 4px 10px;
+    }
+
+    &__count {
+      margin: auto 30px auto 0;
+      font-size: 24px;
+      font-weight: 700;
+      display: flex;
+      align-items: center;
+    }
+
+    &__slash {
+      font-weight: 400;
     }
 
     &__card-squad {
-      display: flex;
+      flex-direction: row;
       justify-content: space-between;
+      align-items: center;
       background-color: #9564aa;
-      height: 59px;
+      height: 51px;
       border-radius: 10px;
       color: #fff;
-      max-width: 260px;
+      max-width: 258px;
+      width: 100%;
     }
-  }
+    input[name='r'] {
+      position: absolute;
+      visibility: hidden;
+    }
+    #r1:checked ~ .s1 {
+      margin-left: 2.4%;
+    }
 
-  #r1:checked ~ .s1 {
-    margin-left: 2.4%;
-  }
+    #r2:checked ~ .s1 {
+      margin-left: -23%;
+    }
 
-  #r2:checked ~ .s1 {
-    margin-left: -23%;
-  }
+    #r3:checked ~ .s1 {
+      margin-left: -64%;
+    }
 
-  #r3:checked ~ .s1 {
-    margin-left: -64%;
-  }
+    #r4:checked ~ .s1 {
+      margin-left: -146.6%;
+    }
 
-  #r4:checked ~ .s1 {
-    margin-left: -146.6%;
-  }
+    #r5:checked ~ .s1 {
+      margin-left: -393.5%;
+    }
 
-  #r5:checked ~ .s1 {
-    margin-left: -393.5%;
+    &__stages {
+      grid-template-columns: repeat(1, 1fr);
+      grid-template-rows: 50px 50px 50px 50px;
+      grid-template-areas:
+        'icon4'
+        'icon1'
+        'icon2'
+        'icon3'
+        'icon5'
+        'icon6'
+        'icon7';
+      margin: 50px auto 0;
+      gap: 0;
+    }
+    &__stages-icon {
+      flex-direction: row;
+      gap: 9px;
+      min-height: 50px;
+    }
+
+    &__stages-text {
+      max-width: 196px;
+      width: 100%;
+      text-align: start;
+    }
+
+    &__almaz {
+      margin: 0 auto 10px;
+      width: 81px;
+      height: 67px;
+    }
+
+    &__stages-wrapper {
+      width: 30px;
+      height: 30px;
+    }
+    &__stages-img {
+      width: 16px;
+      height: 16px;
+    }
   }
 }
